# mtksv

./: .gitignore  .gitmodules  Dockerfile  makefile
container/builder/dotnet/: Dockerfile  setup.sh
container/builder/msdn/: Dockerfile  setup.sh
container/image/dotnet/: Dockerfile  build.sh
container/runtime/dotnet/: Dockerfile  setup.sh
ext/csv/: csv.h
src/: base.cmake  main.cpp
src/core/: config.cpp  config.h  server.cpp  server.h
src/dotnet/: CMakeLists.txt  handler.cpp  handler.h  main.cpp
src/dotnet/stub/: CMakeLists.txt  libserver.c
src/msdn/: handler.h  main.cpp
src/msdn/stub/: libserver.c
tools/common/: mtk-build.sh
tools/dotnet/: makefile  mksv  nuget
